app/public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: <service-name>
  namespace: <service-namespace>
spec:
  rules:
  - host: <service-name>.<cluster-id>.app.daiteap.com
    http:
      paths:
      - backend:
          service:
            name: <service-name>
            port:
              number: <service-port>
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <service-name>.<cluster-id>.app.daiteap.com
    secretName: cert-<service-name>
